analyze all single experiments

--- a/notebooks/2019-09-15-flower-data-analysis-MOESM4.ipynb
+++ b/notebooks/2019-09-15-flower-data-analysis-MOESM4.ipynb
@@ -19,69 +19,58 @@
     "import ipywidgets as widgets\n",
     "from flowermodel import plotting  \n",
     "import pandas as pd\n",
-    "import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!flowermodel framecount --filename ../data/movies/41586_2019_1429_MOESM4_ESM.mov"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir pbslogs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%writefile blob.pbs\n",
-    "#!/bin/bash\n",
-    "#PBS -l nodes=1:ppn=2\n",
-    "#PBS -l walltime=0:10:00\n",
-    "#PBS -l mem=4GB\n",
-    "#PBS -q batch\n",
-    "#PBS -N blob\n",
-    "#PBS -t 0-270\n",
-    "#PBS -o pbslogs/$PBS_JOBNAME.o\n",
-    "#PBS -e pbslogs/$PBS_JOBNAME.e\n",
+    "import glob\n",
     "\n",
-    "cd $PBS_O_WORKDIR\n",
-    "FILE=\"../data/movies/41586_2019_1429_MOESM4_ESM.mov\"\n",
-    ". /projects/chuang-lab/jnh/miniconda3/etc/profile.d/conda.sh\n",
-    "conda activate flower\n",
-    "flowermodel blob --filename $FILE --blob-index $PBS_ARRAYID"
+    "\n",
+    "# The following files were downloaded:\n",
+    "\n",
+    "# 41586_2019_1429_MOESM2_ESM.mov hFweX(GFP/RFP) 0-24.024hr\n",
+    "# 41586_2019_1429_MOESM3_ESM.mov hFwe1(GFP)-hFwe1(RFP) 0-23.707hr\n",
+    "# 41586_2019_1429_MOESM4_ESM.mov hFwe1(GFP)-hFwe2(RFP) 0-23.707hr\n",
+    "# 41586_2019_1429_MOESM5_ESM.mov hFwe1(GFP)-hFwe2(RFP) :10-26:18hr\n",
+    "# 41586_2019_1429_MOESM8_ESM.mov Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP) 0-24.09hr \n",
+    "# 41586_2019_1429_MOESM9_ESM.mov hFweX(GFP)-hFweKO(RFP) 0-24.009?hr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "271\n"
+     ]
+    }
+   ],
+   "source": [
+    "!flowermodel framecount --filename /projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM4_ESM.mov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !qsub blob.pbs"
+    "%%bash\n",
+    "idx=4\n",
+    "flowermodel pbs --filename /projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM${idx}_ESM.mov --jobname blob${idx}\n",
+    "\n",
+    "# qsub blob${idx}.pbs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import pandas as pd\n",
     "# import glob\n",
-    "# moviefile = '41586_2019_1429_MOESM4_ESM.mov'\n",
+    "# moviefile = '41586_2019_1429_MOESM3_ESM.mov'\n",
     "# files = glob.glob('../data/blobs/{:s}/blob*.csv'.format(moviefile))\n",
     "# blobs = [pd.read_csv(file) for file in files]\n",
     "# blobs = pd.concat(blobs).sort_values(['frame', 'color', 'x', 'y']).reset_index(drop=True)\n",
