spatial lotka-volterra implementation

--- a/notebooks/2019-09-22-flower-data-analysis-MOESM8.ipynb
+++ b/notebooks/2019-09-22-flower-data-analysis-MOESM8.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Video7: 41586_2019_1429_MOESM8_ESM.mov \n",
+    "- Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP) \n",
+    "- 0-24.09hr \n",
+    "\n",
+    "Live cell imaging (24 hr) showing the effect of pan-caspase inhibitor Z-VAD-FMK on co-culture of MCF-7 hFweKO cells expressing hFwe1-GFP or hFwe2-RFP. Caspase inhibition rescued cells expressing hFwe1 from being eliminated when co-cultured with cells expressing hFwe2, n=3 biologically independent experiments with similar results."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +42,8 @@
     "import glob\n",
     "\n",
     "\n",
-    "# The following files were downloaded:\n",
+    "# The following files were downloaded from \n",
+    "# https://doi.org/10.1038/s41586-019-1429-3\n",
     "\n",
     "# 41586_2019_1429_MOESM2_ESM.mov hFweX(GFP/RFP) 0-24.024hr\n",
     "# 41586_2019_1429_MOESM3_ESM.mov hFwe1(GFP)-hFwe1(RFP) 0-23.707hr\n",
@@ -60,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10552851[].helix-master\n"
+      "10553235[].helix-master\n"
      ]
     }
    ],
@@ -81,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -132,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2844be17c62640d99c1c48f6db7bde2a",
+       "model_id": "243eaf6f72ab409f88a8189e67a9bac0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,17 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 34/34 [00:22<00:00,  1.48it/s]\n",
-      "100%|██████████| 34/34 [00:13<00:00,  2.44it/s]\n",
-      "100%|██████████| 34/34 [00:12<00:00,  2.77it/s]\n",
-      "100%|██████████| 34/34 [00:08<00:00,  3.90it/s]\n"
+      "100%|██████████| 34/34 [00:24<00:00,  1.40it/s]\n",
+      "100%|██████████| 34/34 [00:14<00:00,  2.35it/s]\n",
+      "100%|██████████| 34/34 [00:14<00:00,  2.34it/s]\n",
+      "100%|██████████| 34/34 [00:09<00:00,  3.68it/s]\n"
      ]
     }
    ],
@@ -194,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
