--- a/notebooks/2019-09-15-flower-data-analysis-MOESM4.ipynb
+++ b/notebooks/2019-09-15-flower-data-analysis-MOESM4.ipynb
@@ -1,10 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Video3: 41586_2019_1429_MOESM4_ESM.mov \n",
+    "- hFwe1(GFP)-hFwe2(RFP)\n",
+    "- 0-23.707hr\n",
+    "\n",
+    "Live cell imaging (24 hr) showing the effect of co-culture of MCF-7 hFweKO cells expressing hFwe1-GFP and hFwe2-RFP. Significant cell death was observed in cells expressing hFwe1 when co-cultured with cells expressing hFwe2, n=3 biologically independent experiments with similar results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -22,7 +42,8 @@
     "import glob\n",
     "\n",
     "\n",
-    "# The following files were downloaded:\n",
+    "# The following files were downloaded from \n",
+    "# https://doi.org/10.1038/s41586-019-1429-3\n",
     "\n",
     "# 41586_2019_1429_MOESM2_ESM.mov hFweX(GFP/RFP) 0-24.024hr\n",
     "# 41586_2019_1429_MOESM3_ESM.mov hFwe1(GFP)-hFwe1(RFP) 0-23.707hr\n",
@@ -34,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -51,36 +72,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10553230[].helix-master\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "idx=4\n",
     "flowermodel pbs --filename /projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM${idx}_ESM.mov --jobname blob${idx}\n",
     "\n",
-    "# qsub blob${idx}.pbs"
+    "qsub blob${idx}.pbs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pandas as pd\n",
-    "# import glob\n",
-    "# moviefile = '41586_2019_1429_MOESM3_ESM.mov'\n",
-    "# files = glob.glob('../data/blobs/{:s}/blob*.csv'.format(moviefile))\n",
-    "# blobs = [pd.read_csv(file) for file in files]\n",
-    "# blobs = pd.concat(blobs).sort_values(['frame', 'color', 'x', 'y']).reset_index(drop=True)\n",
+    "import pandas as pd\n",
+    "import glob\n",
+    "moviefile = '41586_2019_1429_MOESM3_ESM.mov'\n",
+    "files = glob.glob('../data/blobs/{:s}/blob*.csv'.format(moviefile))\n",
+    "blobs = [pd.read_csv(file) for file in files]\n",
+    "blobs = pd.concat(blobs).sort_values(['frame', 'color', 'x', 'y']).reset_index(drop=True)\n",
     "\n",
-    "# blobs.to_csv('../data/blobs/{:s}.blob.csv'.format(moviefile), index=False)"
+    "blobs.to_csv('../data/blobs/{:s}.blob.csv'.format(moviefile), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -115,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "890a807ee27f46dfb9522a34ee3d390f",
+       "model_id": "0aa8078cde634902b7d24e8806c055a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,26 +180,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 271/271 [01:57<00:00,  2.31it/s]\n"
+      "100%|██████████| 271/271 [02:37<00:00,  1.72it/s]\n",
+      "100%|██████████| 271/271 [01:41<00:00,  2.66it/s]\n",
+      "100%|██████████| 271/271 [01:44<00:00,  2.59it/s]\n",
+      "100%|██████████| 271/271 [01:17<00:00,  3.49it/s]\n"
      ]
     }
    ],
    "source": [
-    "color1 = 'r'\n",
-    "color2 = 'r'\n",
-    "rdfdf = rdfobj.get_rdf(color1, color2)"
+    "import flowermodel.calculate_rdf as crdf \n",
+    "data_path = '/projects/chuang-lab/jnh/flower/data'\n",
+    "rdfobj = crdf.vidrdf(data_path, moviefile)\n",
+    "\n",
+    "for color1 in ['r', 'g']:\n",
+    "    for color2 in ['r', 'g']:\n",
+    "        rdfdf = rdfobj.get_rdf(color1, color2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
