--- a/notebooks/2019-08-21-flower-data-analysis-MOESM3.ipynb
+++ b/notebooks/2019-08-21-flower-data-analysis-MOESM3.ipynb
@@ -13,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -67,7 +58,7 @@
     }
    ],
    "source": [
-    "!flowermodel framecount --filename /projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM3_ESM.mov"
+    "# !flowermodel framecount --filename /projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM3_ESM.mov"
    ]
   },
   {
@@ -84,32 +75,32 @@
     }
    ],
    "source": [
-    "%%bash\n",
-    "idx=3\n",
-    "flowermodel pbs --filename /projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM${idx}_ESM.mov --jobname blob${idx}\n",
+    "# %%bash\n",
+    "# idx=3\n",
+    "# flowermodel pbs --filename /projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM${idx}_ESM.mov --jobname blob${idx}\n",
     "\n",
-    "qsub blob${idx}.pbs"
+    "# qsub blob${idx}.pbs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import glob\n",
-    "moviefile = '41586_2019_1429_MOESM3_ESM.mov'\n",
-    "files = glob.glob('../data/blobs/{:s}/blob*.csv'.format(moviefile))\n",
-    "blobs = [pd.read_csv(file) for file in files]\n",
-    "blobs = pd.concat(blobs).sort_values(['frame', 'color', 'x', 'y']).reset_index(drop=True)\n",
+    "# import pandas as pd\n",
+    "# import glob\n",
+    "# moviefile = '41586_2019_1429_MOESM3_ESM.mov'\n",
+    "# files = glob.glob('../data/blobs/{:s}/blob*.csv'.format(moviefile))\n",
+    "# blobs = [pd.read_csv(file) for file in files]\n",
+    "# blobs = pd.concat(blobs).sort_values(['frame', 'color', 'x', 'y']).reset_index(drop=True)\n",
     "\n",
-    "blobs.to_csv('../data/blobs/{:s}.blob.csv'.format(moviefile), index=False)"
+    "# blobs.to_csv('../data/blobs/{:s}.blob.csv'.format(moviefile), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef1bfc7910d543428deb61a2a4ae707c",
+       "model_id": "ac37f32985be4805879bb67f20ca357e",
        "version_major": 2,
        "version_minor": 0
       },
