move metadata; increase rdf resolution

--- a/notebooks/2019-08-30-flower-data-analysis-MOESM2.ipynb
+++ b/notebooks/2019-08-30-flower-data-analysis-MOESM2.ipynb
@@ -13,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -259,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -294,13 +285,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e1b6c1ba4c74780ba493b0e647b76f7",
+       "model_id": "dbf0b1a3d074428a974c89967093b901",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,28 +321,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29/29 [00:25<00:00,  1.12it/s]\n",
-      "100%|██████████| 29/29 [00:20<00:00,  1.40it/s]\n",
-      "100%|██████████| 29/29 [00:17<00:00,  1.65it/s]\n",
-      "100%|██████████| 29/29 [00:20<00:00,  1.41it/s]\n",
-      " 72%|███████▏  | 21/29 [00:18<00:07,  1.08it/s]/projects/chuang-lab/jnh/flower/flowermodel/flowermodel/calculate_rdf.py:103: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "100%|██████████| 29/29 [01:11<00:00,  2.46s/it]\n",
+      "100%|██████████| 29/29 [00:53<00:00,  1.85s/it]\n",
+      "100%|██████████| 29/29 [00:35<00:00,  1.23s/it]\n",
+      "100%|██████████| 29/29 [00:53<00:00,  1.84s/it]\n",
+      " 72%|███████▏  | 21/29 [00:47<00:19,  2.38s/it]/projects/chuang-lab/jnh/flower/flowermodel/flowermodel/calculate_rdf.py:110: RuntimeWarning: invalid value encountered in long_scalars\n",
       "  rdf = ((r1 <= self.dist) & (self.dist < r2)).sum()/ self.N/ a\n",
-      "100%|██████████| 29/29 [00:25<00:00,  1.15it/s]\n",
-      "100%|██████████| 29/29 [00:20<00:00,  1.40it/s]\n",
-      "100%|██████████| 29/29 [00:22<00:00,  1.31it/s]\n",
-      "100%|██████████| 29/29 [00:22<00:00,  1.28it/s]\n"
+      " 90%|████████▉ | 26/29 [00:57<00:07,  2.34s/it]"
      ]
     }
    ],
    "source": [
-    "from flowermodel.calculate_rdf import get_all_rdfs\n",
+    "from flowermodel.calculate_rdf import vidrdf\n",
     "\n",
     "moviefile = '41586_2019_1429_MOESM2_ESM.mov.clips'\n",
     "data_path = '/projects/chuang-lab/jnh/flower/data'\n",
@@ -359,45 +347,24 @@
     "for idx1 in range(2):\n",
     "    for idx2 in range(4):\n",
     "        clipfile = 'clip-{}-{}.mp4'.format(idx1, idx2)\n",
-    "        get_all_rdfs(data_path, os.path.join(moviefile, clipfile))\n"
+    "        rdfobj = vidrdf(data_path, os.path.join(moviefile, clipfile), nbins=500, shellwidth=5)\n",
+    "        rdfobj.get_rdfs_for_all_colorpairs()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from flowermodel.calculate_rdf import get_maxrdf_locs\n",
     "data_path = '/projects/chuang-lab/jnh/flower/data'\n",
-    "clipmeta = pd.read_csv('clip-metadata.txt', sep='\\t')\n",
-    "# def get_vid_shape(filename):\n",
-    "#     vid = imageio.get_reader(filename,  'ffmpeg')\n",
-    "#     return (*vid.get_data(0).shape[:2], vid.count_frames())\n",
-    "\n",
-    "# clipmeta['array_size'] = clipmeta['movfile'].apply(\n",
-    "#     lambda x: get_vid_shape(os.path.join(data_path, 'movies', x)))\n",
-    "\n",
-    "# clipmeta.to_csv('clip-metadata.txt', index=False, sep='\\t')\n",
-    "\n",
-    "rdffiles = glob.glob(os.path.join(data_path, 'blobs/*.color_*.csv'))\n",
-    "rdffiles += glob.glob(os.path.join(data_path, 'blobs/*/*.color_*.csv'))\n",
-    "rdffiles = pd.DataFrame(rdffiles, columns=['rdffile'])\n",
-    "# p = re.compile('41586_2019_1429_MOESM._ESM\\.mov')\n",
-    "p = re.compile('(41586_2019_1429_MOESM\\d_ESM.*)\\.blob.rdf.color_(..)\\.csv')\n",
-    "rdffiles['movfile'] = rdffiles['rdffile'].map(lambda x: re.search(p, x)[1])\n",
-    "rdffiles['color-pair'] = rdffiles['rdffile'].map(lambda x: re.search(p, x)[2])\n",
-    "rdffiles = pd.merge(rdffiles, clipmeta, on='movfile', how='left')\n",
-    "\n",
-    "def get_maxrdf_loc(rdf_file):\n",
-    "    rdf = pd.read_csv(rdf_file, index_col=0)\n",
-    "    return float(rdf.mean().idxmax())\n",
-    "\n",
-    "rdffiles['maxrdf_loc'] = rdffiles['rdffile'].map(get_maxrdf_loc)"
+    "rdffiles = get_maxrdf_locs(data_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +748,7 @@
        "4    51.717172  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1009,6 +976,58 @@
    "metadata": {},
    "source": [
     "# Scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/29 [00:00<?, ?it/s]\u001b[A\n",
+      "  3%|▎         | 1/29 [00:01<00:50,  1.81s/it]\u001b[A\n",
+      "  7%|▋         | 2/29 [00:03<00:48,  1.81s/it]\u001b[A\n",
+      " 10%|█         | 3/29 [00:05<00:47,  1.82s/it]\u001b[A\n",
+      " 14%|█▍        | 4/29 [00:07<00:47,  1.91s/it]\u001b[A\n",
+      " 17%|█▋        | 5/29 [00:09<00:46,  1.92s/it]\u001b[A\n",
+      " 21%|██        | 6/29 [00:11<00:47,  2.08s/it]\u001b[A\n",
+      " 24%|██▍       | 7/29 [00:14<00:47,  2.18s/it]\u001b[A\n",
+      " 28%|██▊       | 8/29 [00:16<00:43,  2.09s/it]\u001b[A\n",
+      " 31%|███       | 9/29 [00:18<00:41,  2.08s/it]\u001b[A\n",
+      " 34%|███▍      | 10/29 [00:20<00:38,  2.04s/it]\u001b[A\n",
+      " 38%|███▊      | 11/29 [00:22<00:37,  2.11s/it]\u001b[A\n",
+      " 41%|████▏     | 12/29 [00:24<00:36,  2.13s/it]\u001b[A\n",
+      " 45%|████▍     | 13/29 [00:27<00:35,  2.19s/it]\u001b[A\n",
+      " 48%|████▊     | 14/29 [00:29<00:32,  2.18s/it]\u001b[A\n",
+      " 52%|█████▏    | 15/29 [00:31<00:30,  2.17s/it]\u001b[A\n",
+      " 55%|█████▌    | 16/29 [00:33<00:29,  2.27s/it]\u001b[A\n",
+      " 59%|█████▊    | 17/29 [00:36<00:26,  2.25s/it]\u001b[A\n",
+      " 62%|██████▏   | 18/29 [00:38<00:24,  2.26s/it]\u001b[A\n",
+      " 66%|██████▌   | 19/29 [00:40<00:21,  2.19s/it]\u001b[A\n",
+      " 69%|██████▉   | 20/29 [00:43<00:21,  2.38s/it]\u001b[A\n",
+      " 72%|███████▏  | 21/29 [00:45<00:18,  2.36s/it]\u001b[A\n",
+      " 76%|███████▌  | 22/29 [00:48<00:16,  2.41s/it]\u001b[A\n",
+      " 79%|███████▉  | 23/29 [00:50<00:14,  2.36s/it]\u001b[A\n",
+      " 83%|████████▎ | 24/29 [00:52<00:12,  2.44s/it]\u001b[A\n",
+      " 86%|████████▌ | 25/29 [00:55<00:10,  2.56s/it]\u001b[A\n",
+      " 90%|████████▉ | 26/29 [00:58<00:07,  2.61s/it]\u001b[A\n",
+      " 93%|█████████▎| 27/29 [01:01<00:05,  2.70s/it]\u001b[A\n",
+      " 97%|█████████▋| 28/29 [01:03<00:02,  2.55s/it]\u001b[A\n",
+      "100%|██████████| 29/29 [01:06<00:00,  2.30s/it]\u001b[A\n"
+     ]
+    }
+   ],
+   "source": [
+    "moviefile = '41586_2019_1429_MOESM2_ESM.mov.clips'\n",
+    "data_path = '/projects/chuang-lab/jnh/flower/data'\n",
+    "clipfile = 'clip-{}-{}.mp4'.format(idx1, idx2)\n",
+    "\n",
+    "rdfobj = vidrdf(data_path, os.path.join(moviefile, clipfile), nbins=500, shellwidth=5)\n",
+    "rdfobj.get_rdfs_for_all_colorpairs()\n"
    ]
   },
   {
