--- a/notebooks/2019-10-04-flower-data-analysis-nextflow.ipynb
+++ b/notebooks/2019-10-04-flower-data-analysis-nextflow.ipynb
@@ -44,13 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from moviepy.editor import VideoFileClip\n",
-    "filename = '/projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM2_ESM.mov'\n",
+    "filename = '/projects/chuang-lab/jnh/flower/data/movies/41586_2019_1429_MOESM9_ESM.mov'\n",
     "clip = VideoFileClip(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(480, 1920, 3)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clip.get_frame(0).shape"
    ]
   },
   {
