--- a/notebooks/2019-10-04-flower-data-analysis-nextflow.ipynb
+++ b/notebooks/2019-10-04-flower-data-analysis-nextflow.ipynb
@@ -76,6 +76,412 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flowermodel.calculate_rdf import get_maxrdf_locs\n",
+    "data_path = '/projects/chuang-lab/jnh/flower/nextflow/rdffiles'\n",
+    "rdffiles = get_maxrdf_locs(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rdffile</th>\n",
+       "      <th>movfile</th>\n",
+       "      <th>color-pair</th>\n",
+       "      <th>celltypes</th>\n",
+       "      <th>time</th>\n",
+       "      <th>array_size</th>\n",
+       "      <th>maxrdf_loc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM8_ESM.mov</td>\n",
+       "      <td>gr</td>\n",
+       "      <td>Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-24.09hr</td>\n",
+       "      <td>(1024, 1024, 34)</td>\n",
+       "      <td>20.686869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM8_ESM.mov</td>\n",
+       "      <td>rg</td>\n",
+       "      <td>Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-24.09hr</td>\n",
+       "      <td>(1024, 1024, 34)</td>\n",
+       "      <td>20.686869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM4_ESM.mov</td>\n",
+       "      <td>gr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 271)</td>\n",
+       "      <td>20.686869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM5_ESM.mov</td>\n",
+       "      <td>gr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>:10-26:18hr</td>\n",
+       "      <td>(1024, 1024, 262)</td>\n",
+       "      <td>20.686869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM4_ESM.mov</td>\n",
+       "      <td>rg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 271)</td>\n",
+       "      <td>20.686869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM5_ESM.mov</td>\n",
+       "      <td>rg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>:10-26:18hr</td>\n",
+       "      <td>(1024, 1024, 262)</td>\n",
+       "      <td>20.686869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM3_ESM.mov</td>\n",
+       "      <td>gr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe1(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 378)</td>\n",
+       "      <td>31.030303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM3_ESM.mov</td>\n",
+       "      <td>rg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe1(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 378)</td>\n",
+       "      <td>31.030303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clips/clip-1-3.mp4</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe4(RFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>41.042084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM8_ESM.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-24.09hr</td>\n",
+       "      <td>(1024, 1024, 34)</td>\n",
+       "      <td>41.373737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM8_ESM.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-24.09hr</td>\n",
+       "      <td>(1024, 1024, 34)</td>\n",
+       "      <td>41.373737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM3_ESM.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe1(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 378)</td>\n",
+       "      <td>41.373737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM5_ESM.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>:10-26:18hr</td>\n",
+       "      <td>(1024, 1024, 262)</td>\n",
+       "      <td>41.373737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM4_ESM.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 271)</td>\n",
+       "      <td>41.373737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM5_ESM.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>:10-26:18hr</td>\n",
+       "      <td>(1024, 1024, 262)</td>\n",
+       "      <td>41.373737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM4_ESM.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 271)</td>\n",
+       "      <td>41.373737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clips/clip-0-0.mp4</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe1(GFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.146293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clips/clip-0-2.mp4</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe1(RFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.146293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clips/clip-0-3.mp4</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe2(RFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.146293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clips/clip-1-0.mp4</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe3(GFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.146293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clips/clip-1-2.mp4</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe3(RFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.146293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clips/clip-1-1.mp4</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe4(GFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.146293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clips/clip-0-1.mp4</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe2(GFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>51.302605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/data/blobs/415...</td>\n",
+       "      <td>41586_2019_1429_MOESM3_ESM.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe1(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 378)</td>\n",
+       "      <td>51.717172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              rdffile  \\\n",
+       "14  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "1   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "6   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "11  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "2   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "15  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "3   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "13  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "16  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "5   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "10  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "7   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "0   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "8   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "9   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "12  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "18  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "19  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "22  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "20  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "17  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "21  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "23  /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "4   /projects/chuang-lab/jnh/flower/data/blobs/415...   \n",
+       "\n",
+       "                                              movfile color-pair  \\\n",
+       "14                     41586_2019_1429_MOESM8_ESM.mov         gr   \n",
+       "1                      41586_2019_1429_MOESM8_ESM.mov         rg   \n",
+       "6                      41586_2019_1429_MOESM4_ESM.mov         gr   \n",
+       "11                     41586_2019_1429_MOESM5_ESM.mov         gr   \n",
+       "2                      41586_2019_1429_MOESM4_ESM.mov         rg   \n",
+       "15                     41586_2019_1429_MOESM5_ESM.mov         rg   \n",
+       "3                      41586_2019_1429_MOESM3_ESM.mov         gr   \n",
+       "13                     41586_2019_1429_MOESM3_ESM.mov         rg   \n",
+       "16  41586_2019_1429_MOESM2_ESM.mov.clips/clip-1-3.mp4         rr   \n",
+       "5                      41586_2019_1429_MOESM8_ESM.mov         gg   \n",
+       "10                     41586_2019_1429_MOESM8_ESM.mov         rr   \n",
+       "7                      41586_2019_1429_MOESM3_ESM.mov         gg   \n",
+       "0                      41586_2019_1429_MOESM5_ESM.mov         gg   \n",
+       "8                      41586_2019_1429_MOESM4_ESM.mov         gg   \n",
+       "9                      41586_2019_1429_MOESM5_ESM.mov         rr   \n",
+       "12                     41586_2019_1429_MOESM4_ESM.mov         rr   \n",
+       "18  41586_2019_1429_MOESM2_ESM.mov.clips/clip-0-0.mp4         gg   \n",
+       "19  41586_2019_1429_MOESM2_ESM.mov.clips/clip-0-2.mp4         rr   \n",
+       "22  41586_2019_1429_MOESM2_ESM.mov.clips/clip-0-3.mp4         rr   \n",
+       "20  41586_2019_1429_MOESM2_ESM.mov.clips/clip-1-0.mp4         gg   \n",
+       "17  41586_2019_1429_MOESM2_ESM.mov.clips/clip-1-2.mp4         rr   \n",
+       "21  41586_2019_1429_MOESM2_ESM.mov.clips/clip-1-1.mp4         gg   \n",
+       "23  41586_2019_1429_MOESM2_ESM.mov.clips/clip-0-1.mp4         gg   \n",
+       "4                      41586_2019_1429_MOESM3_ESM.mov         rr   \n",
+       "\n",
+       "                          celltypes         time         array_size  \\\n",
+       "14  Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)    0-24.09hr   (1024, 1024, 34)   \n",
+       "1   Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)    0-24.09hr   (1024, 1024, 34)   \n",
+       "6             hFwe1(GFP)-hFwe2(RFP)   0-23.707hr  (1024, 1024, 271)   \n",
+       "11            hFwe1(GFP)-hFwe2(RFP)  :10-26:18hr  (1024, 1024, 262)   \n",
+       "2             hFwe1(GFP)-hFwe2(RFP)   0-23.707hr  (1024, 1024, 271)   \n",
+       "15            hFwe1(GFP)-hFwe2(RFP)  :10-26:18hr  (1024, 1024, 262)   \n",
+       "3             hFwe1(GFP)-hFwe1(RFP)   0-23.707hr  (1024, 1024, 378)   \n",
+       "13            hFwe1(GFP)-hFwe1(RFP)   0-23.707hr  (1024, 1024, 378)   \n",
+       "16                       hFwe4(RFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "5   Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)    0-24.09hr   (1024, 1024, 34)   \n",
+       "10  Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)    0-24.09hr   (1024, 1024, 34)   \n",
+       "7             hFwe1(GFP)-hFwe1(RFP)   0-23.707hr  (1024, 1024, 378)   \n",
+       "0             hFwe1(GFP)-hFwe2(RFP)  :10-26:18hr  (1024, 1024, 262)   \n",
+       "8             hFwe1(GFP)-hFwe2(RFP)   0-23.707hr  (1024, 1024, 271)   \n",
+       "9             hFwe1(GFP)-hFwe2(RFP)  :10-26:18hr  (1024, 1024, 262)   \n",
+       "12            hFwe1(GFP)-hFwe2(RFP)   0-23.707hr  (1024, 1024, 271)   \n",
+       "18                       hFwe1(GFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "19                       hFwe1(RFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "22                       hFwe2(RFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "20                       hFwe3(GFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "17                       hFwe3(RFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "21                       hFwe4(GFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "23                       hFwe2(GFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "4             hFwe1(GFP)-hFwe1(RFP)   0-23.707hr  (1024, 1024, 378)   \n",
+       "\n",
+       "    maxrdf_loc  \n",
+       "14   20.686869  \n",
+       "1    20.686869  \n",
+       "6    20.686869  \n",
+       "11   20.686869  \n",
+       "2    20.686869  \n",
+       "15   20.686869  \n",
+       "3    31.030303  \n",
+       "13   31.030303  \n",
+       "16   41.042084  \n",
+       "5    41.373737  \n",
+       "10   41.373737  \n",
+       "7    41.373737  \n",
+       "0    41.373737  \n",
+       "8    41.373737  \n",
+       "9    41.373737  \n",
+       "12   41.373737  \n",
+       "18   45.146293  \n",
+       "19   45.146293  \n",
+       "22   45.146293  \n",
+       "20   45.146293  \n",
+       "17   45.146293  \n",
+       "21   45.146293  \n",
+       "23   51.302605  \n",
+       "4    51.717172  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdffiles.sort_values(['maxrdf_loc', 'celltypes', 'color-pair'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
